--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -293,6 +293,7 @@
     <ClInclude Include="..\Header\Player_Skill_Range.h" />
     <ClInclude Include="..\Header\Player_Skill_Turtle.h" />
     <ClInclude Include="..\Header\Player_State_BallonFly.h" />
+    <ClInclude Include="..\Header\Player_State_Dance.h" />
     <ClInclude Include="..\Header\Player_State_Down.h" />
     <ClInclude Include="..\Header\Player_State_Drawing.h" />
     <ClInclude Include="..\Header\Player_State_GameOver.h" />
@@ -466,6 +467,7 @@
     <ClCompile Include="..\Code\Player_Skill_Range.cpp" />
     <ClCompile Include="..\Code\Player_Skill_Turtle.cpp" />
     <ClCompile Include="..\Code\Player_State_BallonFly.cpp" />
+    <ClCompile Include="..\Code\Player_State_Dance.cpp" />
     <ClCompile Include="..\Code\Player_State_Down.cpp" />
     <ClCompile Include="..\Code\Player_State_Drawing.cpp" />
     <ClCompile Include="..\Code\Player_State_GameOver.cpp" />
